# ont_align_stats

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  collect.rs  config.rs  input.rs  main.rs  mappability.rs  metadata.rs  process.rs  process_indexed.rs  process_unindexed.rs  read.rs  regions.rs  stats.rs
src/cli/: cli_model.rs  config.rs  init_log.rs  log_level.rs
src/cli/config/: getters.rs  make_config.rs
src/read/: bisulfite.rs  coverage.rs  handle_sa_tag.rs  utils.rs
