[package]
name = "ont_align_stats"
version = "0.13.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
log = "~0.4"
stderrlog = "~0.6"
anyhow = "~1.0"
clap = { version = "~3", features = ["cargo"] }
libc = "~0.2"
lazy_static = "~1.4"
regex = "1"
compress_io = "~0.5"
crossbeam-channel = "~0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
num_cpus = "~1"
users = "~0.11"
indexmap = "~2"
chrono = "~0.4"
sysinfo = "~0.30"
r_htslib = { git = "https://github.com/heathsc/r_htslib.git" }
