[package]
name = "ont_align_stats"
version = "0.14.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
debug = true

[dependencies]
log = "~0.4"
stderrlog = "~0.6"
anyhow = "~1.0"
clap = { version = "~4", features = ["cargo"] }
libc = "~0.2"
compress_io = "~0.6"
crossbeam-channel = "~0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "~1.0"
num_cpus = "~1"
uzers = "~0.12"
indexmap = "~2"
chrono = "~0.4"
sysinfo = "~0.38"
# m_htslib = { git = "https://github.com/heathsc/m_htslib.git" }
m_htslib = { path = "../m_htslib" }

